--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,4 @@
-@import "_nullStyle";
+@import "_nullStyle.scss";
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;600&family=Puppies+Play&display=swap');
 @import "option";
 @import "../components/avatar/avatar";
