--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -75,7 +75,7 @@ h6 {
 	font-weight: inherit;
 }
 
-@import "./option.scss";
+@import "./option";
 @import "../components/avatar/avatar";
 @import "../components/button/btnBlue";
 @import "../components/button/btnText";
