--- a/src/components/loadAvatar/_loadAvatar.scss
+++ b/src/components/loadAvatar/_loadAvatar.scss
@@ -7,14 +7,14 @@
 		justify-content: space-between;
 		align-items: center;
 		background-color: $colorWhite;
-		width: 340px;
-		height: 257px;
+		width: 26rem;
+		height: 17rem;
 		overflow: hidden;
 		padding: 30px;
 		border: none;
 		border-radius: 6px;
 
-		h3 {
+		.title {
 			font-size: 15px;
 			margin-bottom: 43px;
 			color: $colorBlack;
