--- a/src/pages/searchChat/tpl.hbs
+++ b/src/pages/searchChat/tpl.hbs
@@ -9,25 +9,14 @@
 			</div>
 		</div>
 		<div class="searchChat">
+			<form id="searchChat__form" class="searchChat__form" name="searchChat_form" action="/searchChat">
 			<input type="text" id="search" class="search" name="search" placeholder="&#128269;&ensp;поиск">
+			{{{buttonBlue}}}
+			</form>
 		</div>
 		<ul class="chatsNow">
 			<li class="chat">
-				<div class="chat__logo"></div>
-				<div class="chat__content">
-					<h3 class="chat__title">Chat Online!</h3>
-					<a href="/chatOnline" class="chat__massage"><span class="myMassage">upss:</span> Lorem
-						i</a>
-				</div>
-				<div class="chat__option">
-					<div class="option_del">
-						<p>&#10006;</p>
-					</div>
-					<div class="option_lookTime"><time>10:00</time></div>
-					<div class="newMassage">
-						<div class="newMassage_namber">2</div>
-					</div>
-				</div>
+			{{{chat1}}}
 			</li>
 		</ul>
 	</div>
@@ -47,7 +36,7 @@
 			</section>
 			<section class="massages">
 				<div class="massages__content">
-					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam autem rerum sint similique
+					<p class="content_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam autem rerum sint similique
 						voluptatem iusto quidem aliquid, repellendus nihil, quibusdam sit omnis atque accusamus
 						maiores quia aspernatur numquam non repudiandae!</p>
 					<time class="time">11:00</time>
@@ -55,7 +44,7 @@
 			</section>
 			<section class="massages">
 				<div class="massages__content">
-					<img src="{{src}}" alt="my_foto">
+					<img class="img" src="{{src}}" alt="my_foto">
 					<time class="time">11:00</time>
 				</div>
 			</section>
@@ -74,11 +63,7 @@
 					<div class="inputMassage">
 						<input type="text" id="massage" class="massage" name="massage" placeholder="Сообщение">
 					</div>
-					<div class="sendMassage">
-						<div><a href="#"><span>
-									&#8605;</span></a>
-						</div>
-					</div>
+					{{{sendMassge}}}
 				</div>
 			</div>
 		</div>
