--- a/src/components/avatar/tplAvatar.hbs
+++ b/src/components/avatar/tplAvatar.hbs
@@ -1,10 +1,9 @@
 <div class="wrap__avatar">
 	<a href="/loadAvatar" class="profile__avatar">
 		<div>
-			<img src="{{src}}" alt="avatar" class="avatar">
+			<img src="{{src}}" alt="avatar" class="avatar img">
 		</div>
-		<p class="changeAvatar">
-			Поменять<br>аватар </p>
+		<p class="changeAvatar">Поменять<br>аватар</p>
 	</a>
-	<h3>{{displayName}}</h3>
+	<h3 class="displayName">{{displayName}}</h3>
 </div>
