--- a/src/components/loadAvatar/tplLoadAvatar.hbs
+++ b/src/components/loadAvatar/tplLoadAvatar.hbs
@@ -1,6 +1,6 @@
 <div class="wrapper__loadAvatar">
 	<div class="loadAvatar">
-		<h3>{{title}}</h3>
+		<h3 class="title">{{title}}</h3>
 		<div class="loadAvatar_change">
 			{{{chooseFile}}}
 		</div>
