--- a/src/components/pageError/tplPageError.hbs
+++ b/src/components/pageError/tplPageError.hbs
@@ -1,6 +1,6 @@
-<div class="{{class}}">
-	<h1>{{title}}</h1>
-	<p>{{text}}</p>
+<div class="content">
+	<h1 class="title">{{title}}</h1>
+	<p class="text">{{text}}</p>
 	<div class="btn_text">
 		{{{choseChatAgain}}}
 	</div>
