--- a/src/pages/chatOnline/tpl.hbs
+++ b/src/pages/chatOnline/tpl.hbs
@@ -9,114 +9,23 @@
 			</div>
 		</div>
 		<div class="searchChat">
-			<input type="text" id="search" class="search" name="search" placeholder="&#128269;&ensp;поиск">
+			<form id="searchChat__form" class="searchChat__form" name="searchChat_form" action="/searchChat">
+				<input type="text" id="search" class="search" name="search" placeholder="&#128269;&ensp;поиск">
+				{{{buttonBlue}}}
+			</form>
 		</div>
 		<ul class="chatsNow">
 			<li class="chat">
-				<div class="chat__logo"></div>
-				<div class="chat__content">
-					<h3 class="chat__title">500!</h3>
-					<a href="/fiveHundred" class="chat__massage"><span class="myMassage"></span> Five Hundred!
-						500!</a>
-				</div>
-				<div class="chat__option">
-					<div class="option_del">
-						<p>&#10006;</p>
-					</div>
-					<div class="option_lookTime"><time>11:00</time></div>
-					<div class="newMassage">
-						<div class="newMassage_namber">1</div>
-					</div>
-				</div>
+				{{{chat1}}}
 			</li>
 			<li class="chat">
-				<div class="chat__logo"></div>
-				<div class="chat__content">
-					<h3 class="chat__title">404!</h3>
-					<a href="/fourHundredFour" class="chat__massage"><span class="myMassage"></span>Four
-						Hundred Four 404!</a>
-				</div>
-				<div class="chat__option">
-					<div class="option_del">
-						<p>&#10006;</p>
-					</div>
-					<div class="option_lookTime"><time>01:00</time></div>
-					<div class="newMassage">
-						<div class="newMassage_namber">14</div>
-					</div>
-				</div>
+				{{{chat2}}}
 			</li>
 			<li class="chat">
-				<div class="chat__logo"></div>
-				<div class="chat__content">
-					<h3 class="chat__title">Chat Online!</h3>
-					<a href="/chatOnline" class="chat__massage"><span class="myMassage">upss:</span> Lorem
-						i</a>
-				</div>
-				<div class="chat__option">
-					<div class="option_del">
-						<p>&#10006;</p>
-					</div>
-					<div class="option_lookTime"><time>10:00</time></div>
-					<div class="newMassage">
-						<div class="newMassage_namber">2</div>
-					</div>
-				</div>
+				{{{chat3}}}
 			</li>
 			<li class="chat">
-				<div class="chat__logo"></div>
-				<div class="chat__content">
-					<h3 class="chat__title">no chat!</h3>
-					<a href="/choseChat" class="chat__massage"><span class="myMassage">upss:</span>Lorem
-						i</a>
-				</div>
-				<div class="chat__option">
-					<div class="option_del">
-						<p>&#10006;</p>
-					</div>
-					<div class="option_lookTime"><time>10:10</time></div>
-					<div class="newMassage _noActive">
-						<div class="newMassage_namber">5</div>
-					</div>
-				</div>
-			</li>
-			<li class="chat">
-				<div class="chat__logo"></div>
-				<div class="chat__content">
-					<h3 class="chat__title">Ivan</h3>
-					<a href="#" class="chat__massage"><span class="myMassage"></span> Lorem ipsum dolor sit amet
-						consectetur
-						adipisicing elit. Architecto nisi, non ducimus fugit expedita, possimus eaque in explicabo
-						fuga atque, error sequi. Sapiente eos deserunt, sed cum praesentium corrupti earum!</a>
-				</div>
-				<div class="chat__option">
-					<div class="option_del">
-						<p>&#10006;</p>
-					</div>
-					<div class="option_lookTime"><time>11:00</time></div>
-					<div class="newMassage">
-						<div class="newMassage_namber">1</div>
-					</div>
-				</div>
-			</li>
-			<li class="chat">
-				<div class="chat__logo"></div>
-				<div class="chat__content">
-					<h3 class="chat__title">Hola</h3>
-					<a href="#" class="chat__massage"><span class="myMassage"></span> Lorem ipsum dolor sit amet
-						consectetur
-						adipisicing elit. Architecto nisi, non ducimus fugit expedita, possimus eaque in explicabo
-						fuga atque, error sequi. Sapiente eos deserunt, sed cum praesentium corrupti earum!</a>
-				</div>
-				<div class="chat__option">
-					<div class="option_del">
-						<p>&#10006;</p>
-					</div>
-					<div class="option_lookTime"><time>11:00</time></div>
-					<div class="newMassage">
-						<div class="newMassage_namber">5</div>
-					</div>
-				</div>
+				{{{chat4}}}
 			</li>
 		</ul>
 	</div>
@@ -131,12 +40,13 @@
 					<span>&#8942;</span>
 				</div>
 			</div>
-			<section class="data_Message">
-				<time> class="data__contant">19 июня</time>
+			<section class="data__Message">
+				<time>19 июня</time>
 			</section>
 			<section class="massages">
 				<div class="massages__content">
-					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam autem rerum sint similique
+					<p class="content_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam autem
+						rerum sint similique
 						voluptatem iusto quidem aliquid, repellendus nihil, quibusdam sit omnis atque accusamus
 						maiores quia aspernatur numquam non repudiandae!</p>
 					<time class="time">11:00</time>
@@ -144,7 +54,7 @@
 			</section>
 			<section class="massages">
 				<div class="massages__content">
-					<img src="{{src}}" alt="my_foto">
+					<img class="img" src="{{src}}" alt="my_foto">
 					<time class="time">11:00</time>
 				</div>
 			</section>
@@ -163,11 +73,7 @@
 					<div class="inputMassage">
 						<input type="text" id="massage" class="massage" name="massage" placeholder="Сообщение">
 					</div>
-					<div class="sendMassage">
-						<div><a href="#"><span>
-									&#8605;</span></a>
-						</div>
-					</div>
+					{{{sendMassge}}}
 				</div>
 			</div>
 		</div>
