--- a/src/pages/profile/_profile.scss
+++ b/src/pages/profile/_profile.scss
@@ -3,77 +3,26 @@
 	max-width: 100vw;
 	width: 100%;
 
-	.wrap__arrow {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		min-height: 100vh;
-		width: 2.5%;
-
-		.blueCircle {
-			@include blueCircle(28px);
-			padding: 2px;
-
-			a {
-				color: $colorWhite;
-				font-size: 24px;
-			}
-		}
-	}
-
 	.content {
-		min-height: 100vh;
-		width: 97.5%;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		background-color: $colorBg;
+		@extend %contentProfile;
 
-		.profile {
-			width: 37%;
+		.wrap__profileBtn {
+			width: 100%;
 			display: flex;
-			align-items: center;
-			justify-content: center;
 			flex-direction: column;
+			align-items: flex-start;
 
-			.profile__form {
-				width: 100%;
-				display: flex;
-				flex-direction: column;
-				margin-bottom: 60px;
-
-				.form-control {
-					display: flex;
-					justify-content: space-between;
-					border-bottom: 1px solid $colorLine;
-					margin-bottom: 21px;
-
-					input {
-						background-color: $colorBg;
-						text-align: end;
-						color: $colorGrey;
-					}
-				}
+			.btn {
+				margin-bottom: 1.5rem;
 			}
 
-			.wrap__profileBtn {
-				width: 100%;
-				display: flex;
-				flex-direction: column;
-				align-items: flex-start;
+			.out {
+				a {
+					color: $colorRed;
+					transition: all 0.3s linear;
 
-				.btn {
-					margin-bottom: 21px;
-
-					a {
-						font-style: 13px;
-						color: $colorBlue;
-					}
-				}
-
-				.out {
-					a {
-						color: $colorRed;
+					&:hover {
+						color: $colorBlack;
 					}
 				}
 			}
