create sprint2 deploy

--- a/src/pages/changeAvatar/fileOk/tpl.hbs
+++ b/src/pages/changeAvatar/fileOk/tpl.hbs
@@ -1,3 +1,11 @@
 <div class="wrapper__loadAvatar">
-	{{{fileOk}}}
+	<div class="loadAvatar">
+		<h3 class="title">{{title}}</h3>
+		<div class="loadAvatar_change">
+			{{{chooseFile}}}
+		</div>
+		<form class="loadAvatar_btn" action="/profile">
+			{{{buttonBlue}}}
+		</form>		
+	</div>
 </div>
