--- a/src/pages/index/tpl.hbs
+++ b/src/pages/index/tpl.hbs
@@ -1,11 +1,20 @@
 <div class="wrapper__index">
 	<div class="enterChat">
-		<form id="enterChat__form" class="chat__form" name="enterChat__form" action="/choseChat">
-			<h1 class="title">{{title}}</h1>
-			{{{inputIndex}}}
+		<form class="chat__form form">
+			<h1 class="title">{{title}}</h1>			
+				<label class="label" for={{nameInputLogin}}>
+					{{labelInputLogin}}
+					{{{inputLogin}}}
+					<small class="error"></small>
+				</label>			
+				<label class="label last" for={{nameInputPassword}}>
+					{{labelInputPassword}}
+					{{{inputPassword}}}
+					<small class="error"></small>
+				</label>
 			{{{buttonBlue}}}
 		</form>
-		<div id="toRegistration__form" name="toRegistration__form">
+		<div class="toRegistration__form">
 			{{{buttonText}}}
 		</div>
 	</div>
