--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,22 +1,30 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@500;600&family=Puppies+Play&display=swap");
 @import "./nullstyle";
 @import "./option";
+
 @import "../components/avatar/avatar";
 @import "../components/button/btnBlue";
-@import "../components/button/btnText";
+@import "../components/link/link";
+
+@import "../components/btnSendMessage/sendMassage";
+@import "../components/arrowPrevPage/arrow";
+@import "../components/message/message";
+
 @import "../pages/index/index";
 @import "../pages/registration/registration";
-@import "../pages/chooseChat/choseChat";
+
+@import "../pages/chooseChat/chooseChat";
 @import "../pages/searchChat/searchChat";
 @import "../pages/chatOnline/chatOnline";
+
 @import "../pages/fiveHundred/fiveHundred";
 @import "../pages/fourHundredFour/fourHundredFour";
+
 @import "../pages/profile/profile";
 @import "../pages/changeProfile/changeProfile";
 @import "../pages/changePassword/changePassword";
-@import "../components/loadAvatar/loadAvatar";
+
+@import "../pages/changeAvatar/loadAvatar/chooseFileAvatar";
+@import "../pages/changeAvatar/fileError/errorFileAvatar";
 @import "../pages/changeAvatar/fileOk/fileOkAvatar";
-@import "../components/blueCircle/sendMassage";
-@import "../components/blueCircle/arrow";
-@import "../components/blueCircle/newMassage";
-@import "../components/chat/chat"
+@import "../pages/changeAvatar/reloadFile/reloadFileAvatar";
