--- a/src/pages/changeAvatar/reloadFile/tpl.hbs
+++ b/src/pages/changeAvatar/reloadFile/tpl.hbs
@@ -1,3 +1,11 @@
 <div class="wrapper__loadAvatar">
-	{{{reloadFile}}}
+	<div class="loadAvatar">
+		<h3 class="title">{{title}}</h3>
+		<div class="loadAvatar_change">
+			{{{chooseFile}}}
+		</div>
+		<form class="loadAvatar_btn" action="/fileOk">
+			{{{buttonBlue}}}
+		</form>		
+	</div>
 </div>
