--- a/src/pages/changePassword/tpl.hbs
+++ b/src/pages/changePassword/tpl.hbs
@@ -3,8 +3,22 @@
 	<div class="content">
 		<div class="profile">
 			{{{avatarLog}}}
-			<form id="changePassword__form" class="profile__form" name="changePassword__form" action="/profile">
-				{{{profilePas}}}
+			<form class="profile__form form" name="changePassword__form">
+				<label class="label" for={{nameInputOldPassword}}>
+					{{labelInputOldPassword}}
+					{{{inputOldPassword}}}
+					<small class="error"></small>
+				</label>
+				<label class="label" for={{nameInputPassword}}>
+					{{labelInputPassword}}
+					{{{inputPassword}}}
+					<small class="error"></small>
+				</label>
+				<label class="label" for={{nameInputPasswordAgain}}>
+					{{labelInputPasswordAgain}}
+					{{{inputPasswordAgain}}}
+					<small class="error"></small>
+				</label>
 				<div class="wrap__btn">
 					<div class="btn_width">
 						{{{btnSaveCangePasword}}}
