--- a/src/pages/fiveHundred/tpl.hbs
+++ b/src/pages/fiveHundred/tpl.hbs
@@ -1,3 +1,9 @@
 <div class="wrapper___fiveHundred">
-	{{{pageError500}}}
+	<div class="content">
+		<h1 class="title">500</h1>
+		<p class="text">Мы уже фиксим</p>
+		<div class="btn_text">
+			{{{buttonText}}}
+		</div>
+	</div>
 </div>
