--- a/src/pages/fourHundredFour/tpl.hbs
+++ b/src/pages/fourHundredFour/tpl.hbs
@@ -1,3 +1,9 @@
 <div class="wrapper___fourHundredFour">
-	{{{pageError404}}}
+	<div class="content">
+		<h1 class="title">404</h1>
+		<p class="text">Не туда попали</p>
+		<div class="btn_text">
+			{{{buttonText}}}
+		</div>
+	</div>
 </div>
