sprint2 after rev

--- a/src/pages/changePassword/tpl.hbs
+++ b/src/pages/changePassword/tpl.hbs
@@ -3,7 +3,7 @@
 	<div class="content">
 		<div class="profile">
 			{{{avatarLog}}}
-			<form class="profile__form form" name="changePassword__form">
+			<form class="profile__form form">
 				<div class="form-control">
 					{{titleOldPassword}}
 					{{{inputOldPassword}}}
