--- a/src/pages/changeProfile/tpl.hbs
+++ b/src/pages/changeProfile/tpl.hbs
@@ -3,7 +3,7 @@
 	<div class="content">
 		<div class="profile">
 			{{{avatarLog}}}
-			<form class="profile__form form" name="changeProfile__form" action="/profile">
+			<form class="profile__form form">
 				<div class="form-control">
 					{{titleEmail}}
 					{{{inputEmail}}}
