--- a/src/pages/chatOnline/chatOnline.scss
+++ b/src/pages/chatOnline/chatOnline.scss
@@ -45,12 +45,12 @@
 				color: $colorGrey;
 			}
 
-			.massages {
+			.messages {
 				@extend %wrapConentChatsOtherUser;
 			}
 
-			.my__massages {
-				@extend %myMassages;
+			.my__messages {
+				@extend %myMessages;
 			}
 
 			.wrap__footer {
