--- a/src/pages/chatOnline/tpl.hbs
+++ b/src/pages/chatOnline/tpl.hbs
@@ -35,8 +35,8 @@
 			<section class="data__Message">
 				<time>19 июня</time>
 			</section>
-			<section class="massages">
-				<div class="massages__content">
+			<section class="messages">
+				<div class="messages__content">
 					<p class="content_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam autem
 						rerum sint similique
 						voluptatem iusto quidem aliquid, repellendus nihil, quibusdam sit omnis atque accusamus
@@ -44,14 +44,14 @@
 					<time class="time">11:00</time>
 				</div>
 			</section>
-			<section class="massages">
-				<div class="massages__content">
+			<section class="messages">
+				<div class="messages__content">
 					<img class="img" src="{{src}}" alt="my_foto">
 					<time class="time">11:00</time>
 				</div>
 			</section>
-			<section class="my__massages">
-				<div class="massages__content">
+			<section class="my__messages">
+				<div class="messages__content">
 					<p>Hola Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente fuga assumenda
 						temporibus consequatur magni. Reprehenderit amet sint, quibusdam ratione quis nisi quae,
 						deserunt eius accusantium consequatur dignissimos esse autem
@@ -62,10 +62,10 @@
 			<div class="wrap__footer">
 				<div class="footer__contant">
 					<div class="added"><a href="#"><span>&#128206;</span></a></div>
-					<form class="inputMassage">
-						<input type="text" class="massage" name="massage" placeholder="Сообщение">
+					<form class="inputMessage">
+						<input type="text" class="message" name="message" placeholder="Сообщение">
 					</form>
-					{{{sendMassge}}}
+					{{{sendMessge}}}
 				</div>
 			</div>
 		</div>
