--- a/src/pages/registration/tpl.hbs
+++ b/src/pages/registration/tpl.hbs
@@ -1,6 +1,6 @@
 <div class="wrapper__registration">
 	<div class="registration">
-		<form class="chat__form form" name="registration__form">
+		<form class="chat__form form">
 			<h2 class="title">{{title}}</h2>
 			<div class="form-control">
 				{{titleEmail}}
