--- a/src/pages/searchChat/searchChat.scss
+++ b/src/pages/searchChat/searchChat.scss
@@ -48,12 +48,12 @@
 				}
 			}
 
-			.massages {
+			.messages {
 				@extend %wrapConentChatsOtherUser;
 			}
 
-			.my__massages {
-				@extend %myMassages;
+			.my__messages {
+				@extend %myMessages;
 			}
 
 			.wrap__footer {
