--- a/src/components/input/tpl.hbs
+++ b/src/components/input/tpl.hbs
@@ -1,1 +1,1 @@
-<input type={{type}} class="input" name={{name}} placeholder={{placeholder}} {{readonly}} />
+<input type={{type}} class="input {{class}}" name={{name}} placeholder={{placeholder}} {{readonly}} />
