--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -17,7 +17,7 @@
 		font-weight: 600;
 	}
 
-	.chat__massage {
+	.chat__message {
 		font-size: 12px;
 		color: $colorGrey;
 		max-height: 30px;
@@ -32,7 +32,7 @@
 			color: $colorBlack;
 		}
 
-		.myMassage {
+		.myMessage {
 			font-weight: 600;
 			color: $colorBlack;
 		}
