--- a/src/components/message/tpl.hbs
+++ b/src/components/message/tpl.hbs
@@ -2,7 +2,7 @@
 	<div class="chat__logo"></div>
 	<div class="chat__content">
 		<h3 class="chat__title">{{chatTitle}}</h3>
-		<a href={{href}} class="chat__massage"><span class="myMassage">{{myMassage}}</span>&ensp;{{chatMassage}}</a>
+		<a href={{href}} class="chat__message"><span class="myMessage">{{myMessage}}</span>&ensp;{{chatMessage}}</a>
 	</div>
 	<div class="chat__option">
 		<div class="option_del">
