--- a/src/scss/option.scss
+++ b/src/scss/option.scss
@@ -67,7 +67,7 @@ $colorFont: #ff6600;
 	font-weight: 500;
 	color: $colorBlack;
 
-	.massages__content {
+	.messages__content {
 		display: flex;
 		align-items: flex-end;
 		max-width: 49%;
@@ -91,7 +91,7 @@ $colorFont: #ff6600;
 	}
 }
 
-%myMassages {
+%myMessages {
 	display: flex;
 	justify-content: flex-end;
 	align-items: flex-end;
@@ -99,7 +99,7 @@ $colorFont: #ff6600;
 	line-height: 15px;
 	margin-bottom: 30px;
 
-	.massages__content {
+	.messages__content {
 		display: flex;
 		align-items: flex-end;
 		max-width: 50%;
@@ -191,10 +191,10 @@ $colorFont: #ff6600;
 			padding: 2px;
 		}
 
-		.inputMassage {
+		.inputMessage {
 			width: 90%;
 
-			.massage {
+			.message {
 				width: 100%;
 				height: 32px;
 				border-radius: 32px;
