--- a/src/components/message/tpl.hbs
+++ b/src/components/message/tpl.hbs
@@ -1,13 +1,9 @@
-<li class="chat">
-	<div class="chat__logo"></div>
-	<div class="chat__content">
-		<h3 class="chat__title">{{chatTitle}}</h3>
-		<a href={{href}} class="chat__message"><span class="myMessage">{{myMessage}}</span>&ensp;{{chatMessage}}</a>
-	</div>
-	<div class="chat__option">
-		<div class="option_del">
-			<p>&#10006;</p>
-		</div>
-		<div><time class="option_lookTime">{{time}}</time></div>
-	</div>
-</li>
+<a id={{id}} class="chatLink">
+	<li class="chat">
+		<div class="chat__logo"></div>
+		<div class="chat__content">
+			<h3 class="chat__title">{{title}}</h3>
+			<p class="chat__message">{{last_message}}</p>
+		</div>	
+	</li>
+</a>
