--- a/src/pages/chooseChat/chooseChat.scss
+++ b/src/pages/chooseChat/chooseChat.scss
@@ -10,21 +10,12 @@
 			@extend %searchChat;
 		}
 
+		.createChat {
+			@extend %searchChat;
+		}
+
 		.chatsNow {
 			@extend %chat;
-		}
-	}
-
-	.chatContent {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		height: 100vh;
-		width: 81.4%;
-
-		.noChoseChat {
-			font-size: 12px;
-			color: $colorGrey;
 		}
 	}
 }
