--- a/src/pages/chooseChat/tpl.hbs
+++ b/src/pages/chooseChat/tpl.hbs
@@ -1,29 +1,4 @@
 <div class="wrapper__choseChat">
-	<div class="allChats">
-		<div class="profile">
-			<div class="profile__outProfile">
-				<span>&lt;</span>{{{signOut}}}
-			</div>
-			<div class="profile__inProfile">
-				{{{inProfile}}}<span> &gt;</span>
-			</div>
-		</div>
-		<div class="searchChat">
-			<form class="searchChat__form" name="searchChat_form form" action="/searchChat">
-				<input type="text" class="search" name="search" placeholder="&#128269;&ensp;поиск">
-				{{{buttonBlue}}}
-			</form>
-		</div>
-		<ul class="chatsNow">
-			{{{chat1}}}
-			{{{chat2}}}
-			{{{chat3}}}
-			{{{chat4}}}
-		</ul>
-	</div>
-	<div class="chatContent">
-		<div class="noChoseChat">
-			<p>Выберите чат чтобы отправить сообщение</p>
-		</div>
-	</div>
+    {{{messageAside}}}
+    {{{chatContent}}}
 </div>
