Sprint_3 after rev

--- a/src/components/chatsOnline/tpl.hbs
+++ b/src/components/chatsOnline/tpl.hbs
@@ -16,12 +16,15 @@
 					{{{buttonDelUser}}}
 				</form>
 			</div>
+			<div class="delChat">
+				{{{buttonDelChat}}}
+			</div>
 		</div>
 		<section class="data__Message" id="data__Message">
 		</section>
-		<section class="otherUser_messages" id="otherUser_messages">			
+		<section class="otherUser_messages" id="otherUser_messages">
 		</section>
-		<section class="my__messages " id="my__messages">			
+		<section class="my__messages " id="my__messages">
 		</section>
 		<div class="wrap__footer">
 			<div class="footer__contant">
