--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,7 +19,7 @@
 @import "../components/chatsOnline/chatOnline.scss";
 
 @import "../pages/fiveHundred/fiveHundred.scss";
-@import "../pages/fourHundredFour/fourHundredFour.scss";
+@import "../pages/warning/warning.scss";
 
 @import "../pages/profile/profile.scss";
 @import "../pages/changeProfile/changeProfile.scss";
